5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4071/executions/1643_2711.log
== TEST (2019-04-14 19:54:29) 
-- CODE:
a=float(input("leia o valor:")):
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	

-- ERROR:
File "XXXX", line 1
    a=float(input()):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:54:49) 
-- CODE:
a=input(input("leia o valor:")):
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	

-- ERROR:
File "XXXX", line 1
    a=input(input()):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:55:02) 
-- CODE:
A=input(input("leia o valor:")):
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	

-- ERROR:
File "XXXX", line 1
    A=input(input()):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:55:12) 
-- CODE:
A=int(input("leia o valor:")):
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	

-- ERROR:
File "XXXX", line 1
    A=int(input()):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:55:34) 
-- CODE:
A=float(input("leia o valor:")):
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	

-- ERROR:
File "XXXX", line 1
    A=float(input()):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:57:11) 
-- CODE:
Valor=float(input("valor disponivel:")):
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	

-- ERROR:
File "XXXX", line 1
    Valor=float(input()):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:57:22) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:59:02) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(a>=soma):
	mensagem="SUFICIENTE"
else:
	mensagem="INSULFICIENTE"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if(a>=soma):
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 19:59:43) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
else:
	mensagem="INSULFICIENTE"
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:00:51) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
else:
	mensagem="INSULFICIENTE"
print(mensagem)
-- EXECUTION TIME:
0.276146
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:01:12) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
else:
	mensagem="INSULFICIENTE"
print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:01:15) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
else:
	mensagem="INSULFICIENTE"
print(mensagem)
-- EXECUTION TIME:
0.137603
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:01:48) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
else:
	mensagem="INSULFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.168425
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:

-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:02:09) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else:
	mensagem="INSULFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.165362
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:03:50) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else(Valor<soma):
	mensagem="INSULFICIENTE"
	print(mensagem)
-- ERROR:
File "XXXX", line 10
    else(Valor<soma):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:04:09) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=b*c+d*e
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else:
	mensagem="INSULFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:04:58) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=(b*c)+(d*e)
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else:
	mensagem="INSULFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.160747
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:05:19) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=(b*c)+(d*e)
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else:
	mensagem="INSULFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.184746
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 20:10:03) 
-- CODE:
Valor=int(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=(b*c)+(d*e)
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else:
	mensagem="INSULFICIENTE"
	print(mensagem)
-- OUTPUT:
SUFICIENTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:10:05) 
-- CODE:
Valor=int(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=(b*c)+(d*e)
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else:
	mensagem="INSULFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.199284
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSULFICIENTE
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 20:11:22) 
-- CODE:
Valor=float(input("valor disponivel:"))
b=int(input("quantidades de tickets do RU:"))
c=float(input("valor dos tickets:"))
d=int(input("quantidades de passes:"))
e=float(input("valor dos passes:"))
soma=(b*c)+(d*e)
if(Valor>=soma):
	mensagem="SUFICIENTE"
	print(mensagem)
else:
	mensagem="INSUFICIENTE"
	print(mensagem)
-- EXECUTION TIME:
0.118502
-- TEST CASE 1:
---- input:
400
15
1.20
30
1.50
---- correct output:
SUFICIENTE
---- user output:
SUFICIENTE
-- TEST CASE 2:
---- input:
90
22
1.20
44
1.50
---- correct output:
INSUFICIENTE
---- user output:
INSUFICIENTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
